Fixed contrast issues

--- a/src/_includes/assets/sass/base/_variables.scss
+++ b/src/_includes/assets/sass/base/_variables.scss
@@ -70,7 +70,7 @@
   --primary-link-base: 344;
   // --primary-link-base: 344deg;
   // --primary-link: hsla(var(--primary-link-base), 55%, 51%, 100%);
-  --primary-link: #d26481;
+  --primary-link: #bc526e;
   --primary-link-hover: hsla(var(--primary-link-base), 56%, 46%, 100%);
   --background-color: #f9f9f9;
   --text-color: #333;
